build_scripts/docker/kube-configs/wmts/wmts-db-combined-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wmts-app
  labels:
    name: wmts-app
spec:
  containers:
  - name: wmts-app
    image: radiantbluetechnologies/wmts
    ports:
    - containerPort: 8080
  - name: wmtsdb
    image: postgres:latest 
    ports:
    - containerPort: 5432
