build_scripts/docker/kube-configs/wmts/wmts-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wmts-deployment
spec:
  replicas: 3
  template:
    metadata:
      name: wmts-postgres
      labels:
        app: wmts-postgres
    spec:
      containers:
      - name: wmts-app
        image: radiantbluetechnologies/wmts
        ports:
        - containerPort: 8080
          name: wmts
      - name: wmtsdb
        image: postgres:latest 
        ports:
        - containerPort: 5432
          name: wmtsdb
