build_scripts/docker/kube-configs/wmts/wmts-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wmtsapp
  labels:
    name: wmtsapp
spec:
  containers:
  - name: wmts-app
    image: radiantbluetechnologies/wmts
    ports:
    - containerPort: 8080
      name: wmts
