build_scripts/docker/kube-configs/wmts/wmtsdb-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: wmtsdb
  labels:
    name: wmtsdb
spec:
 containers:
 - name: wmtsdb
  image: postgres:latest 
  ports:
    - containerPort: 5432
      name: wmtsdb
