build_scripts/docker/kube-configs/wmts/wmts-db-combined-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: wmts-app
  name: wmts-app
spec:
  ports:
    - port: 8080
  selector:
    name: wmts-app
