build_scripts/docker/kube-configs/wmts/wmtsdb-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: wmtsdb
  name: wmtsdb
spec:
  ports:
    - port: 5432
  selector:
    name: wmtsdb
